# cssallmlib

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.idx/: dev.nix
docs/: cssallmlib_documentation.md
experiments/: sndb_chroma.ipynb  sndb_langchain.ipynb  sndb_pdf.ipynb  sndb_smolagents.ipynb
sandbox/: .env.example  snd_chroma.py  snd_pinecone.py
src/cssallmlib/: __init__.py  core.py
src/cssallmlib/implementations/: llm_translation.py
src/cssallmlib/tests/: conftest.py  test_pinecone_manager.py  test_pinecone_manager_embed_and_upsert.py  test_pinecone_manager_search.py  test_pinecone_manager_upsert.py
src/cssallmlib/vectordb/: __init__.py  chroma_db.py  operations.py  pinecone_db.py
src/scripts/: pdf_to_chroma.py
src/tests/: test_chroma_real.py  test_pinecone_db.py
tests/: test_pinecone_manager.py
