[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cssallmlib"
version = "0.1.4"
authors = [
    { name = "Stavros Pitoglou", email = "s.pitoglou@csl.gr" },
]
description = "A Python library providing helper utilities for LLM operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "pinecone>=6.0.0",
    "sentence-transformers>=2.2.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
[project.urls]
"Homepage" = "https://github.com/yourusername/cssallmlib"
"Bug Tracker" = "https://github.com/yourusername/cssallmlib/issues"