[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cssallmlib"
version = "0.1.6"
authors = [{ name = "Stavros Pitoglou", email = "s.pitoglou@csl.gr" }]
description = "A Python library providing helper utilities for LLM operations"
readme = "README.md"
keywords = ["llm", "ai", "machine-learning", "utilities"]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "python-dotenv>=1.0.1",
    # "pinecone>=6.0.0",
    # "sentence-transformers>=2.2.2",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "duckduckgo-search>=7.5.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=6.0.0"]

[project.urls]
"Homepage" = "https://github.com/computer-solutions-gr/cssallmlib"
"Bug Tracker" = "https://github.com/computer-solutions-gr/cssallmlib/issues"
